<resources>
    <string name="app_name">YourList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing_in">Sing in</string>
    <string name="sing_up">Register</string>
    <string name="recovery">Recovery</string>
    <string name="to_sign_in"><u>sing in</u></string>
    <string name="to_sign_in2"><u>Already registered?</u></string>
    <string name="to_recovery"><u>Forgot password?</u></string>
    <string name="to_register"><u>Do not have account?</u></string>

    <string name="login">Username or Email</string>
    <string name="email">Email</string>
    <string name="mail_help">Enter your Email address</string>
    <string name="username">Username</string>
    <string name="username_help">Enter username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>


</resources>